--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "lodash": "^4.17.5",
+    "multimap": "^1.0.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
