--- a/web/package.json
+++ b/web/package.json
@@ -14,10 +14,17 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "element-ui": "^2.2.1",
+    "jsuri": "^1.3.1",
     "lodash": "^4.17.5",
     "multimap": "^1.0.2",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-awesome": "^2.3.5",
+    "vue-keep-scroll": "^0.1.1",
+    "vue-keep-scroll-position": "^0.1.2",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
